--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
 
 <body>
     <script src='js.js'></script>
-<div class="question">
-    <h1></h1>
-</div>
+  
+        <div class='game-counter'>
+            <h1 id='wins-counter'></h1>
+            <h1 id='loss-counter'></h1>
+            <h1 id='letters-guessed'></h1>
+         
+        </div>
+        <h1 id='display-game'></h1>
+   
 </body>
 
 </html>
